--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
             </div>
             <div id="C"> 
                 <a href="">Home</a>
-                <a href="">About us</a>
+                <a href="/templates/chiku.html">About us</a>
                 <a href="">Contact us</a>
 
             </div>
