--- a/templates/chiku.html
+++ b/templates/chiku.html
@@ -85,6 +85,13 @@ Mansi served as the project representative and managed the presentation and expl
 <P id="para7">
 🚀 
 Our project is a combination of <span id="f">Machine Learning and Web Development, designed as a prediction-based system</span>. Through this project, Team Web Wizards enhanced technical skills, teamwork, and problem-solving abilities.</P>
+<br>
+<p>Email:kailash.20253126@mnnit.ac.in</p>
+<p>LinkedIn Profile : <a href="https://www.linkedin.com/in/kailash-vishwakarma-932732310/">CLICK here to visit</a> https://www.linkedin.com/in/kailash-vishwakarma-932732310/</p>
+<br>
+<br>
+<p></p>
+
 </div>
 
 </body>
