--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,8 @@
             </div>
             <div id="C"> 
                 <a href="">Home</a>
-                <a href="/templates/chiku.html">About us</a>
+                <a href="{{ url_for('about') }}">About Us</a>
+
 
             </div>
         </div>
