--- a/templates/home.html
+++ b/templates/home.html
@@ -159,7 +159,7 @@
                 <div >
                     <ul class="name1">
                         <li>Khushboo Yadav</li>
-                        <li>Kailash Viswakarma</li>
+                        <li>Kailash Vishwakarma</li>
                         <li>Hartik verma</li>
                         <li>Mansi Patil</li>
    
