--- a/templates/index_spam.html
+++ b/templates/index_spam.html
@@ -25,17 +25,17 @@
             <h4>1. SPAM LIST</h4>
             <li>Had your mobile 11 months or more? U R entitled to Update to the latest colour mobiles with camera for Free! Call The Mobile Update Co FREE on 08002986030</li>
             <li>URGENT! You have won a 1 week FREE membership in our Â£100,000 Prize Jackpot! Txt the word: CLAIM to No: 81010 T&C www.dbuk.net LCCLTD POBOX 4403LDNW1A7RW18</li>
-            <li>England v Macedonia - dont miss the goals/team news. Txt ur national team to 87077 eg ENGLAND to 87077 Try:WALES, SCOTLAND 4txt/Ãº1.20 POBOXox36504W45WQ 16+</li>
+            <li>“Your loan is approved. Click the link to get instant cash</li>
             <li>Congrats! 1 year special cinema pass for 2 is yours. call 09061209465 now! C Suprman V, Matrix3, StarWars3, etc all 4 FREE! bx420-ip4-5we. 150pm. Dont miss out!</li>
             <li>Your free ringtone is waiting to be collected. Simply text the password "MIX" to 85069 to verify. Get Usher and Britney. FML, PO Box 5249, MK17 92H. 450Ppw 16</li>
         </ul>
         <ul>
             <h4>2. NON-SPAM LIST</h4>
-            <li>Just forced myself to eat a slice. I'm really not hungry tho. This sucks. Mark is getting worried. He knows I'm sick when I turn down pizza. Lol</li>
+            <li>Hi Rohan, I just wanted to remind you about the group meeting scheduled for tomorrow at 10 am in the seminar hall. Please make sure to bring the project files and your laptop. If you need any help with the presentation slides, let me know today so we can prepare properly.</li>
             <li>Hello! How's you and how did saturday go? I was just texting to see if you'd decided to do anything tomo. Not that i'm trying to invite myself or anything!</li>
             <li>Sorry, I'll call later in meeting.</li>
             <li>Hi. Wk been ok - on hols now! Yes on for a bit of a run. Forgot that i have hairdressers appointment at four so need to get home n shower beforehand. Does that cause prob for u?"</li>
-            <li>Thanks a lot for your wishes on my birthday. Thanks you for making my birthday truly memorable.</li>
+            <li>Good evening sir, I have completed the assignment on data structures and uploaded it to the classroom portal. Kindly check and let me know if any changes are required. Thank you for your guidance and support</li>
         </ul>
     </div>
 
